@@ -1,3 +1,10 @@
+2012-03-28  Michael Albinus  <michael.albinus@gmx.de>
+
+	* tramp.el (tramp-message-show-progress-reporter-message): New defvar.
+	(tramp-with-progress-reporter): Use it.  We cannot use
+	`tramp-message-show-message' here, because this suppresses also
+	error buffers.
+
 2012-03-27  Michael Albinus  <michael.albinus@gmx.de>
 
 	* tramp-compat.el (tramp-compat-copy-directory): Fix error in
